--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,10 @@
+version: '3'
 services:
   homeassistant:
     container_name: homeassistant
     image: homeassistant/home-assistant:0.114.0
     volumes:
-      - ./homeassistant:/config
+      - ./config:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     ports:
